--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type ="text/css" href="bootstrap/css/bootstrap.css">
     <title>Website Công Ty TNHH Tin Học Cao Gia Phát</title>
 </head>
 <body>
@@ -11,8 +13,33 @@
     <h1> Địa chỉ: 150/6/9 Long phước, Phường Long Phước, Tp Thủ Đức, Tp Hồ Chí Minh</h1>
     <h1> MST: </h1>
     <h1> Điện Thoại: 0907903090</h1>
-    <div>
-
+    <h1>Container</h1>
+    <div class="container" style="background-color: grey; margin-bottom: 50px;">
+       <div class="row">
+          <div class="col-md-4 col-sm-6 col-xs-12">
+             <div class="khoi"></div>
+          </div>
+          <div class="col-md-8 col-sm-6 col-xs-12">
+             <div class="khoi"></div>
+          </div>
+       </div>
     </div>
+    <h1>Container-fuild</h1>
+    <div class="container-fluid" style="background-color: rgb(192, 130, 37);">
+       <div class="row">
+          <div class="col-md-3">
+             <div class="khoi"></div>
+          </div>
+          <div class="col-md-9">
+             <div class="khoi"></div>
+          </div>
+       </div>
+    </div>
+
+        <!-- JavaScript Bundle with Popper -->
+    
+        <script src="jquery-3.3.1.min.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script typy="text/javacript" src="bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
