--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type ="text/css" href="bootstrap/css/bootstrap.css">
     <title>Website Công Ty TNHH Tin Học Cao Gia Phát</title>
 </head>
@@ -13,32 +12,46 @@
     <h1> Địa chỉ: 150/6/9 Long phước, Phường Long Phước, Tp Thủ Đức, Tp Hồ Chí Minh</h1>
     <h1> MST: </h1>
     <h1> Điện Thoại: 0907903090</h1>
-    <h1>Container</h1>
-    <div class="container" style="background-color: grey; margin-bottom: 50px;">
-       <div class="row">
-          <div class="col-md-4 col-sm-6 col-xs-12">
-             <div class="khoi"></div>
-          </div>
-          <div class="col-md-8 col-sm-6 col-xs-12">
-             <div class="khoi"></div>
-          </div>
-       </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
-    <h1>Container-fuild</h1>
-    <div class="container-fluid" style="background-color: rgb(192, 130, 37);">
-       <div class="row">
-          <div class="col-md-3">
-             <div class="khoi"></div>
-          </div>
-          <div class="col-md-9">
-             <div class="khoi"></div>
-          </div>
-       </div>
-    </div>
+  </div>
+</nav>
 
         <!-- JavaScript Bundle with Popper -->
     
-        <script src="jquery-3.3.1.min.js"></script>
+        <script src="jquery.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script typy="text/javacript" src="bootstrap/js/bootstrap.js"></script>
 </body>
