--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Website Công Ty TNHH Tin Học Cao Gia Phát</title>
 </head>
 <body>
-
+ <div class="menutop">
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -45,6 +45,7 @@
     </div>
   </div>
 </nav>
+</div>
 
 <h1> Công Ty TNHH Tin Học Cao Gia phát</h1>
 <h1> Địa chỉ: 150/6/9 Long phước, Phường Long Phước, Tp Thủ Đức, Tp Hồ Chí Minh</h1>
