--- a/index.html
+++ b/index.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type ="text/css" href="bootstrap/css/bootstrap.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
     <title>Website Công Ty TNHH Tin Học Cao Gia Phát</title>
 </head>
 <body>
+
+  <div class="container-fluid p-5 bg-primary text-white">
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-3">
+          <h1> logo </h1>
+        </div>
+        <div class="col-sm-9 text-left">
+          <h1> Công Ty TNHH Tin Học Cao Gia phát</h1>
+          <h3> Địa chỉ: 150/6/9 Long phước, Phường Long Phước, Tp Thủ Đức, Tp Hồ Chí Minh</h3>
+          <h3> MST: </h3>
+          <h3> Điện Thoại: 0907903090</h3>
+        </div>
+
+
+      </div>
+    </div>
+
+  </div>
  <div class="menutop">
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">HOME</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Giới Thiệu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Chăm Sóc Khách Hàng</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Danh Mục Sản Phẩm
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Máy Vi Tính</a></li>
+            <li><a class="dropdown-item" href="#">LapTop</a></li>
+            <li><a class="dropdown-item" href="#">Máy In</a></li>
+            <li><a class="dropdown-item" href="#">Linh Kiện Máy Tính - LapTop</a></li>
+            <li><a class="dropdown-item" href="#">Linh Kiện Máy In</a></li>
+            <li><a class="dropdown-item" href="#">Phụ Kiện</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Khác</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -46,16 +70,12 @@
   </div>
 </nav>
 </div>
-
-<h1> Công Ty TNHH Tin Học Cao Gia phát</h1>
-<h1> Địa chỉ: 150/6/9 Long phước, Phường Long Phước, Tp Thủ Đức, Tp Hồ Chí Minh</h1>
-<h1> MST: </h1>
-<h1> Điện Thoại: 0907903090</h1>
+</div>
 
         <!-- JavaScript Bundle with Popper -->
-    
+    <!--
         <script src="jquery.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script typy="text/javacript" src="bootstrap/js/bootstrap.js"></script>
+        <script typy="text/javacript" src="bootstrap/js/bootstrap.js"></script> -->
 </body>
 </html>
